--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <variable
+            name="handler"
+            type="com.schipala_ianko_radoslav.newsreader.listener.NewsReaderHandler" />
 
         <variable
             name="viewModel"
@@ -12,31 +17,36 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/photo_image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher_background" />
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/title_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:padding="4dp"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="4dp"
             android:text="@{viewModel.title}"
             tools:text="Title" />
 
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/photo_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:onClickListener="@{() -> handler.onItemSelected(viewModel)}"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_launcher_background"
+            app:imageUrl="@{viewModel.imageURL}" />
+
         <TextView
             android:id="@+id/content_text_view"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:ellipsize="end"
             android:lines="1"
-            android:padding="4dp"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="8dp"
             android:text="@{viewModel.content}"
             tools:text="Some text that might be quite long;adsadadasdasdasdads" />
     </LinearLayout>
