--- a/app/src/main/res/layout/news_list_fragment.xml
+++ b/app/src/main/res/layout/news_list_fragment.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.schipala_ianko_radoslav.newsreader.model.NewsListViewModel" />
+            type="com.schipala_ianko_radoslav.newsreader.model.NewsReaderViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,7 +19,8 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="8dp"
-            app:items="@{viewModel.newsList}"
+            app:handler="@{viewModel}"
+            app:items="@{viewModel.items}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
