--- a/app/src/main/res/layout/news_list_fragment.xml
+++ b/app/src/main/res/layout/news_list_fragment.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.schipala_ianko_radoslav.newsreader.model.NewsReaderViewModel" />
+            type="com.schipala_ianko_radoslav.newsreader.feature.newsreaderlist.model.NewsReaderViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
