add remote repo

--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -27,6 +27,7 @@
             android:paddingHorizontal="8dp"
             android:paddingVertical="4dp"
             android:text="@{viewModel.title}"
+            android:textStyle="bold"
             tools:text="Title" />
 
         <androidx.appcompat.widget.AppCompatImageView
